--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "qs": "^6.9.6",
     "vue": "^3.0.7",
     "vue-router": "^4.0.4"
   }
