--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/runtime": "^7.13.10",
     "@vue/compiler-sfc": "^3.0.7",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.1",
     "file-loader": "^6.2.0",
@@ -28,6 +33,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.1",
     "qs": "^6.9.6",
     "vue": "^3.0.7",
