封装层叠卡片原生swiper组件

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
       "@babel/preset-env",
       {
         "targets": {
-          "browsers": ["last 2 versions"] // 针对每个浏览器最后的两个版本进行转义
+          "browsers": ["last 2 versions"]
         }
       }
     ]
