--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.5",
     "element-plus": "^1.0.2-beta.41",
     "qs": "^6.9.6",
     "vue": "^3.0.7",
