--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dayjs": "^1.10.5",
     "element-plus": "^1.0.2-beta.41",
     "qs": "^6.9.6",
+    "video.js": "^7.12.3",
     "vue": "^3.0.7",
     "vue-router": "^4.0.4",
     "vuex": "^4.0.0"
